cabal-version:      3.0
name:               CPSParser
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             justin.kasteleijn@gmail.com
maintainer:         justin.kasteleijn@gmail.com
-- copyright:
category:           Parser
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    exposed-modules:  Parser,
                      ParserError,
                      Position,
                      Combinators,
                      Parsable,

                      Predicates.IsDigit,
                      Predicates.IsNewline,
                      Predicates.IsTab,
                      Predicates.IsAlpha,
                      Predicates.IsSpace
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.3.0,
                      text
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite CPSParser-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-tool-depends: sydtest-discover:sydtest-discover
    other-modules:
            CombinatorsSpec,
            CustomTestLib,
            ParserSpec
    build-depends:
        base ^>=4.18.3.0,
        CPSParser,
        sydtest
